# youtube_assistant

./: README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
handlers/: __init__.py  assistant.py  middleware.py  search_videos.py  start.py
service/: __init__.py  youtube_manager.py
utils/: constants.py  keyboards.py
